--- a/BlankIndex.html
+++ b/BlankIndex.html
@@ -38,7 +38,7 @@
                 <a href="page5.html" class="w3-bar-item w3-button">Buy Account</a>
                 <a href="page6.html" class="w3-bar-item w3-button">Website hours</a>
             </div>
-            <h2> welcome to Chancelor's website  - Homepage </h2>
+            <h2> Skin trading site - Homepage </h2>
             <p>Use the Navigation bar links to move between webpages.</p>
         </div>
         <div class="container">
