--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="myDiv">
             <div class="w3-bar w3-yellow">
                 <div class="container2">
-                <a href="BlankIndex.html" class="w3-bar-item w3-button">HOME</a>
+                <a href="index.html" class="w3-bar-item w3-button">HOME</a>
                 </div>
                                
                 <a href="page2.html" class="w3-bar-item w3-button">Preview</a>
