--- a/page5.html
+++ b/page5.html
@@ -22,7 +22,7 @@
     <body>
         <div class="myDiv">
             <div class="w3-bar w3-yellow">
-                <a href="BlankIndex.html" class="w3-bar-item w3-button">HOME</a>
+                <a href="index.html" class="w3-bar-item w3-button">HOME</a>
                 <a href="page2.html" class="w3-bar-item w3-button">Preview</a>
                 <a href="page3.html" class="w3-bar-item w3-button">Contact me</a>
                 <a href="page4.html" class="w3-bar-item w3-button">Sell account</a>
